<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="com.vroy.trapper.menuscreens.MainMenuActivity">



    <com.vroy.trapper.widgets.AutoResizeTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/title_text"
        android:text="Trapper"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/instruction_screen_button"
        android:background="@drawable/rounded_rect_btn"
        android:text="@string/instruction_button_text"
        android:onClick="instructionBtnPressed"
        android:layout_below="@+id/playBtn"
        android:layout_centerHorizontal="true"
        />


    <Button
        android:id="@+id/playBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:text="@string/play_button_text"
        android:background="@drawable/rounded_rect_btn"
        android:onClick="playBtnPressed" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/difficultyButtonText"
        android:id="@+id/difficulty_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/instruction_screen_button"
        android:onClick="difficultyButtonPressed"
        android:background="@drawable/rounded_rect_btn"/>

    <com.vroy.trapper.widgets.AutoResizeTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/MAIN_MENU_HIGHSCORE"/>



</RelativeLayout>
